# VirtFS

./: Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: ccpp.yml
include/: Makefile.am  virtfs.h  virtfs_log.h
lib/: Makefile.am  human.c  human.h  virtfs.c  virtfs_i.h
utils/: Makefile.am  glfs-cli-commands.c  glfs-cli.c  glfs-cli.h  glfs-ls.c  glfs-stat-util.c  glfs-stat.c
